# gstreamer

./: .gitignore  Makefile.Inc  readme.txt
dvr/: CMakeLists.txt  Makefile.Inc  lsw.patch
dvr/DVR_SDK_TestConsole/: DVR_SDK_TestConsole.cpp  DvrSdkTestBase.cpp  DvrSdkTestBase.h  DvrSdkTestCmd.cpp  DvrSdkTestCmd.h  DvrSdkTestCmd_Log.cpp  DvrSdkTestCmd_Log.h  DvrSdkTestCmd_Pos.cpp  DvrSdkTestCmd_Pos.h  DvrSdkTestCmd_Select.cpp  DvrSdkTestCmd_Select.h  DvrSdkTestExec.cpp  DvrSdkTestExec.h  DvrSdkTestExec_.cpp  DvrSdkTestLoop_Setup.h  DvrSdkTestUtils.cpp  DvrSdkTestUtils.h  DvrSdkTest_Close.cpp  DvrSdkTest_Close.h  DvrSdkTest_DB_GetDirInfo.cpp  DvrSdkTest_DB_GetDirInfo.h  DvrSdkTest_DB_GetFileInfo.cpp  DvrSdkTest_DB_GetFileInfo.h  DvrSdkTest_DB_GetMediaInfo.cpp  DvrSdkTest_DB_GetMediaInfo.h  DvrSdkTest_EnumDevices.cpp  DvrSdkTest_EnumDevices.h  DvrSdkTest_MediaMgrClose.cpp  DvrSdkTest_MediaMgrClose.h  DvrSdkTest_MediaMgrOpen.cpp  DvrSdkTest_MediaMgrOpen.h  DvrSdkTest_Player_Close.cpp  DvrSdkTest_Player_Close.h  DvrSdkTest_Player_Get_Position.cpp  DvrSdkTest_Player_Get_Position.h  DvrSdkTest_Player_Get_Speed.cpp  DvrSdkTest_Player_Get_Speed.h  DvrSdkTest_Player_Next.cpp  DvrSdkTest_Player_Next.h  DvrSdkTest_Player_Open.cpp  (+21 more)
dvr/Make/OF-DVR-S302/: CMakeLists.txt
dvr/Make/OF-DVR-S311/: CMakeLists.txt
dvr/Make/OF-DVR-V302/: CMakeLists.txt
dvr/cmake.modules/: Findgraphic_engine.cmake  Findj6armcomm.cmake  Findrootfs.cmake  Findtoolchain.cmake
dvr/dvr_glue/: CMakeLists.txt  DvrTask.cpp  DvrTask.h
dvr/dvr_glue/DbgOnline/client/: Makefile  dbg_client_arm  dbg_client_x86  debug_online_client.cpp
dvr/dvr_glue/DbgOnline/dbgCases/: dvr_dbgonline.cpp
dvr/dvr_glue/DbgOnline/inc/: debug_online_common.h
dvr/dvr_glue/DbgOnline/server/: debug_online_server.cpp
dvr/dvr_glue/include/: DVR_APP_DEF.h  DVR_APP_INTFS.h  DVR_APP_INTFS_INPUT.h  DVR_GUI_OBJ.h
dvr/dvr_glue/source/framework/: DvrAppMain.cpp  DvrAppMain.h  DvrAppMgt.cpp  DvrAppMgt.h  DvrAppNotify.cpp  DvrAppNotify.h  DvrAppUtil.cpp  DvrAppUtil.h  DvrApp_Pref.cpp  DvrApp_Pref.h  HcMgr_Handler.cpp  HcMgr_Handler.h
dvr/dvr_glue/source/graphics/: DvrGraphics.cpp  DvrGraphics.h
dvr/dvr_glue/source/gui/: Gui_Dialog.cpp  Gui_Dialog.h  Gui_DvrMiscFormatCard.cpp  Gui_DvrMiscFormatCard.h  Gui_DvrPbApp.cpp  Gui_DvrPbApp.h  Gui_DvrRecApp.cpp  Gui_DvrRecApp.h  Gui_DvrThumbApp.cpp  Gui_DvrThumbApp.h  Gui_Menu_Setup.cpp  Gui_Menu_Setup.h
dvr/dvr_sdk/: CMakeLists.txt
dvr/dvr_sdk/include/: DVR_SDK_DEF.h  DVR_SDK_INTFS.h
dvr/dvr_sdk/source/ComSvc/: DvrComSvc_AsyncOp.cpp  DvrComSvc_AsyncOp.h  DvrComSvc_HcMgr.cpp  DvrComSvc_HcMgr.h  DvrComSvc_SyncOp.cpp  DvrComSvc_SyncOp.h  DvrComSvc_Timer.cpp  DvrComSvc_Timer.h  Makefile
dvr/dvr_sdk/source/DvrSystemControl/: DVR_SDK.cpp  DvrMutex.cpp  DvrMutex.h  DvrMutexLocker.cpp  DvrMutexLocker.h  DvrSystemControl.cpp  DvrSystemControl.h  DvrTimer.cpp  DvrTimer.h  Makefile
dvr/dvr_sdk/source/FileSystem/: FileBase.cpp  FileBase.h  FileDB.cpp  FileDB.h  FileDBManger.cpp  FileDBManger.h  Object.h
dvr/dvr_sdk/source/MetaData/: DVR_METADATA_INTFS.h  Dvr_MediaFilePreview.cpp  Dvr_MetaData.cpp  EasyExif.cpp  EasyExif.h  Makefile
dvr/dvr_sdk/source/Monitor/: DvrMonitor_Mount.cpp  DvrMonitor_Mount.h  DvrMonitor_Mount_Win32.cpp  DvrMonitor_Mount_Win32.h  DvrMonitor_Storage.cpp  DvrMonitor_Storage.h  Makefile
dvr/dvr_sdk/source/Osa/: dprint.c  dprint.h  osa.cpp  osa.h  osa_fs.cpp  osa_fs.h  osa_mark.cpp  osa_mark.h  osa_msgq.cpp  osa_msgq.h  osa_mutex.cpp  osa_mutex.h  osa_notifier.cpp  osa_notifier.h  osa_popen.cpp  osa_sem.cpp  osa_sem.h  osa_thr.cpp  osa_thr.h  osa_timer.cpp  osa_timer.h  osa_tsk.cpp  osa_tsk.h
dvr/dvr_sdk/source/Osd/: Makefile  OsdData.cpp  OsdDc.cpp  OsdDc.h  OsdDef.h  OsdFile.cpp  OsdFile.h  OsdFont.cpp  OsdFont.h  OsdString.cpp  OsdString.h  OsdTitle.cpp  OsdTitle.h  TimeOverlay.cpp  TimeOverlay.h
dvr/dvr_sdk/source/Photo/: DVR_PHOTO_DEF.h  Encoder_libjpeg.cpp  Encoder_libjpeg.h  JpegThumb.cpp  JpegThumb.h  Makefile  PhotoAsyncOp.cpp  PhotoAsyncOp.h  PhotoEngine.cpp  PhotoEngine.h
dvr/dvr_sdk/source/Player/: DVR_PLAYER_DEF.h  DVR_PLAYER_INTFS.h  DvrPlayerLoop.cpp  DvrPlayerLoop.h  DvrPlayerPanel.cpp  DvrPlayerPanel.h  Dvr_Playback.cpp  Dvr_Utils.cpp  Makefile  PhotoPlaybackEngine.cpp  PhotoPlaybackEngine.h  PlaybackEngine.cpp  PlaybackEngine.h
dvr/dvr_sdk/source/Recorder/: ApaRecorderEngine.cpp  ApaRecorderEngine.h  CycleBuffer.cpp  CycleBuffer.h  DVR_RECORDER_DEF.h  DVR_RECORDER_INTFS.h  DvrRecorderLoop.cpp  DvrRecorderLoop.h  Dvr_Recorder.cpp  EventRecorderEngine.cpp  EventRecorderEngine.h  IaccRecorderEngine.cpp  IaccRecorderEngine.h  Makefile  (+16 more)
dvr/gstreamer/glib-2.38.2/: configure  gtk-doc.make
dvr/gstreamer/gst-canbuf/: Makefile
dvr/gstreamer/gst-multifile/: CMakeLists.txt  Makefile
dvr/gstreamer/gst-plugins-bad-1.2.3/: Makefile  _stdint.h  aclocal.m4  arm-linux-gnueabi-libtool  arm-linux-gnueabihf-libtool  config.status  configure
dvr/gstreamer/gst-plugins-base-1.2.3/: _stdint.h  aclocal.m4  arm-linux-gnueabi-libtool  config.h  configure.ac
dvr/gstreamer/gst-plugins-good-1.2.3/: Makefile  arm-linux-gnueabi-libtool  arm-linux-gnueabihf-libtool  config.h  gst-plugins-good.spec
dvr/gstreamer/gst-ti-ducati/: Makefile
dvr/gstreamer/gst-ti-vpe/: Makefile
dvr/gstreamer/gst-ti-wayland/: Makefile
dvr/gstreamer/gst-videomixer/: CMakeLists.txt  Makefile
dvr/gstreamer/gstreamer-1.2.3/: _stdint.h  arm-linux-gnueabihf-libtool  configure
dvr/gstreamer/libdce/: CMakeLists.txt  Makefile
gstreamer/gst-canbuf/: CMakeLists.txt
gstreamer/gst-canbuf/src/: can.h
gstreamer/gst-isomp4/: CMakeLists.txt  Makefile
gstreamer/gst-isomp4/isomp4/: Makefile  Makefile.in  bitstream.c  bitstream.h  gstqtmux.h  isomp4-plugin.c  qtdemux.c  qtdemux.h  qtdemux_types.c
gstreamer/gst-ti-ducati/: CMakeLists.txt
gstreamer/gst-ti-ducati/src/: gstducatibufferpriv.c  gstducatibufferpriv.h  gstducatih264enc.h  gstducatimpeg4dec.h  gstducativc1dec.c  gstducativc1dec.h  gstducatividdec.c
gstreamer/gst-ti-wayland/: CMakeLists.txt
gstreamer/gst-ti-wayland/src/: gstwaylandsink.c
(+2169 files in other folders)
